# agriscore

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: README.md  auth.py  config.py  dependencies.py  llm.py  main.py  main_api.py
app/agent/: agent.py  handler.py  prompts.py  tools.py
app/api/: bank.py  customer.py  farmer.py  internal.py  webhook.py
app/db/: connection.py
app/models/: database.py  schemas.py
app/pipeline/: climate.py  document.py  expediente.py  orchestrator.py  satellite.py  scoring.py  socioeconomic.py
app/services/: evolution.py
frontend/: README.md  package-lock.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/cultivo/: page.tsx
frontend/src/app/inicio/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/perfil/: page.tsx
frontend/src/hooks/: use-farmer-data.ts
frontend/src/lib/: api.ts  mock-data.ts
frontend/src/types/: farmer.ts
infra/: README.md  step-functions.json
infra/docker/: Dockerfile.api  Dockerfile.api-rest  Dockerfile.core  Dockerfile.evolution
infra/lambda/: pipeline_proxy.py
infra/lambda/handlers/: calculate_score.py  extract_docs.py  fetch_climate.py  fetch_satellite.py  fetch_socioeconomic.py  generate_expediente.py  monthly_trigger.py
infra/lambda/shared/: db.py
infra/sagemaker/: inference.py
ml/: README.md  generate_data.py  train.py
scripts/: README.md  deploy_aws.sh  generate_demo_docs.py  package_lambda.sh  setup_db.py  test_demo.py  test_demo_docs.py  test_lambda_local.py  test_webhook.py
(+24 files in other folders)
