[project]
name = "agriscore"
version = "0.1.0"
description = "Cloud-native platform for agricultural credit scoring using satellite data, AI, and gamification"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.86.0",
    "asyncpg>=0.30.0",
    "boto3>=1.42.78",
    "fastapi>=0.135.2",
    "geoalchemy2>=0.17.1",
    "httpx>=0.28.1",
    "joblib>=1.5.1",
    "numpy>=2.4.4",
    "openai>=2.30.0",
    "pillow>=12.1.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "sentinelhub>=3.11.5",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
